ui changes on settings page

--- a/src/pages/attendance/styles.css
+++ b/src/pages/attendance/styles.css
@@ -26,3 +26,11 @@
   border: none !important;
   color: black !important;
 }
+.attendance_iconContainer {
+  background-color: rgba(20, 184, 166, 0.1);
+  padding: 7px;
+  border-radius: 8px;
+}
+.attendance_icon {
+  color: rgb(20, 184, 166);
+}
