--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -5,30 +5,111 @@
 } */
 
 .backgroundImg {
-    position: relative;
-  }
-  
-  .backgroundImg::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url(../../assets/images/bgimg1.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    filter: blur(2px); 
-    z-index: -1;
-  }
-
-.loginLeftside{
-    background-image: url(../../assets/images/leftbg.webp);
+  position: relative;
 }
 
-.emailinput::placeholder{
-    text-align: center;
+.backgroundImg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../../assets/images/bgimg1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: blur(2px);
+  z-index: -1;
 }
-.passwordinput::placeholder{
-    text-align: center;
+
+.loginLeftside {
+  background-image: url(../../assets/images/leftbg.webp);
+}
+
+.emailinput::placeholder {
+  text-align: center;
+}
+.passwordinput::placeholder {
+  text-align: center;
+}
+.login_mainContainer {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(
+    to bottom right,
+    #05a9f2 0%,
+    white 45%,
+    white 55%,
+    #019e25 100%
+  ); /* background: linear-gradient(
+    to bottom right,
+    #05a9f2 0%,
+    white 45%,
+    white 55%,
+    #019e25 96%
+  ); */
+}
+.loginlogo_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login_logo {
+  width: 160px;
+}
+.login_cardContainer {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  width: 550px;
+  padding: 65px 30px;
+  background-color: white;
+}
+.welcome_heading {
+  text-align: center;
+  font-weight: 700;
+  font-size: 27px;
+  margin-top: 6px;
+  margin-bottom: 2px;
+}
+.signin_heading {
+  color: #706f6fee;
+  font-weight: 600;
+  margin-bottom: 30px;
+  text-align: center;
+}
+.inputfields_label {
+  font-weight: 600;
+}
+.login_inputfields {
+  height: 36px;
+  background-color: #ffffff;
+  background-image: none;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #d9d9d9;
+  border-radius: 6px;
+  transition: all 0.2s;
+  width: 100%;
+  margin-top: 5px;
+}
+.fotgotpassword_text {
+  text-align: end;
+  font-weight: 600;
+  margin-top: 4px;
+}
+.login_button {
+  color: #fff;
+  background-color: #019e25;
+  box-shadow: 0 2px 0 rgba(88, 5, 255, 0.06);
+  font-size: 14px;
+  height: 35px;
+  width: 100%;
+  border-radius: 6px;
+  margin-top: 30px;
+}
+.login_button:active {
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  transform: translateY(4px);
 }
