--- a/src/components/Common/commonstyles.css
+++ b/src/components/Common/commonstyles.css
@@ -9,7 +9,62 @@
   transition: all 0.2s;
   width: 100%;
 }
+.commonInputfield:hover {
+  border-color: #d9d9d9;
+}
+.commonInputfield:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+.commonsearchbar:hover {
+  border-color: #d9d9d9;
+}
+.commonsearchbar:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
 .commonfield_label {
   font-weight: 600 !important;
   margin-bottom: 6px !important;
+}
+.commoninputafterimage_fieldContainer {
+  display: flex;
+  position: relative;
+  width: 100%;
+}
+.commoninputafterimageField {
+  height: 30px;
+  background-color: #ffffff;
+  background-image: none;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #d9d9d9;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  transition: all 0.2s;
+  width: 100%;
+}
+.commoninputafterimageField:hover {
+  border-color: #d9d9d9;
+}
+.commoninputafterimageField:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+.inputafterimage_imageContainer {
+  background-color: rgb(0 0 0 / 2%);
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  border: 1px solid #d9d9d9;
+  border-left: none;
+  width: 40px;
 }
