--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ant-switch {
+  background: #c9c6c6 !important; /* Inactive background color */
+}
+.ant-switch.ant-switch-checked {
+  background: #25a17d !important;
+}
+/* tab color change */
+.ant-tabs-ink-bar {
+  border-bottom: 2px solid #25a17d;
+  color: red;
+}
+.ant-tabs .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
+  color: #25a17d !important;
+}
+.ant-tabs .ant-tabs-tab:hover {
+  color: #25a17d !important;
+}
+.ant-tabs .ant-tabs-tab-btn:hover {
+  color: #25a17d !important;
+}
