worked on navigation

--- a/src/pages/setting/styles.css
+++ b/src/pages/setting/styles.css
@@ -78,7 +78,7 @@
 .usertable_actionbutton {
   padding: 6px 9px;
   border-radius: 6px;
-  color: #ae9eff;
+  color: #25a17d;
 }
 .usertable_actionbutton:hover {
   border: 1px solid rgb(226 223 239/ 1) !important;
