--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -67,19 +67,19 @@
 }
 .welcome_heading {
   text-align: center;
-  font-weight: 700;
+  font-weight: 600;
   font-size: 27px;
   margin-top: 6px;
   margin-bottom: 2px;
 }
 .signin_heading {
   color: #706f6fee;
-  font-weight: 600;
+  font-weight: 500;
   margin-bottom: 30px;
   text-align: center;
 }
 .inputfields_label {
-  font-weight: 600;
+  font-weight: 500;
 }
 .login_inputfields {
   height: 36px;
@@ -99,7 +99,8 @@
 }
 .fotgotpassword_text {
   text-align: end;
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 14px;
   margin-top: 4px;
 }
 .login_button {
