--- a/src/layout/sidebarstyles.css
+++ b/src/layout/sidebarstyles.css
@@ -18,3 +18,15 @@
 .sidebarContainer::-webkit-scrollbar-thumb:hover {
   background: #555; /* Color of the scroll thumb on hover */
 }
+.my-custom-sidebar {
+  background-color: #1a202c; /* Equivalent to bg-gray-900 */
+  width: 16rem; /* Equivalent to w-64 */
+  height: 100%; /* Equivalent to h-full */
+  transition: all 300ms ease-in-out; /* Equivalent to transition-all, duration-300, and ease-in-out */
+}
+/* @media (min-width: 320px) and (max-width: 800px) {
+  .my-custom-sidebar {
+    width: 100%;
+    height: 100%;
+  }
+} */
