--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,28 @@
 .ant-tabs .ant-tabs-tab-btn:hover {
   color: #25a17d !important;
 }
+/* table header color */
+.ant-table-thead > tr > th {
+  background-color: white !important;
+  color: gray !important; /* Change this to your desired text color */
+}
+.ant-table-wrapper
+  .ant-table-tbody
+  .ant-table-row.ant-table-row-selected
+  > .ant-table-cell {
+  background-color: rgba(8, 199, 177, 0.212) !important;
+}
+.ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #25a17d;
+  border-color: #25a17d;
+}
+.ant-checkbox-checked:hover .ant-checkbox-inner {
+  background-color: #25a17d !important;
+  border-color: #25a17d !important;
+}
+.ant-checkbox-wrapper:hover .ant-checkbox-inner {
+  border: 1px solid #25a17d !important;
+}
+.ant-checkbox-indeterminate .ant-checkbox-inner:after {
+  background-color: #25a17d !important;
+}
