--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -36,12 +36,12 @@
   border-left-width: 0px !important;
 }
 .explore_button:hover {
-  border-color: #a18aff !important;
+  border-color: #25a17d !important;
   color: black !important;
   border-left-width: 1px !important;
 }
 .explore_button:hover .navbar_discoversearchnbar {
-  border-color: #a18aff !important;
+  border-color: #25a17d !important;
   color: red !important;
 }
 .dashboard_download_button {
@@ -86,15 +86,13 @@
   color: #a18aff !important;
 }
 /* reports styles */
-.reports_rowcontainer {
-  padding: 7px 20px;
-  margin-bottom: 15px;
-}
 .reports_headings {
-  padding: 0px 26px;
-  margin-top: 10px;
+  margin-top: 20px;
   font-weight: 500;
   color: gray;
+}
+.reports_rowcontainer {
+  margin-top: 7px;
 }
 .reports_card {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -223,11 +221,13 @@
 }
 .projects_addbuttonContainer {
   display: flex;
-  padding: 12px 26px;
-  margin-top: 20px;
   justify-content: flex-end;
   align-items: center;
 }
 .projecttable_Container {
-  padding: 12px 26px;
+  margin-top: 30px;
+}
+/* alerts styles */
+.alerts_mainContainer {
+  padding: 19px 26px;
 }
