--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -126,7 +126,7 @@
 }
 .login_button {
   color: #fff;
-  background-color: #019e25;
+  background-color: #25a17d;
   box-shadow: 0 2px 0 rgba(88, 5, 255, 0.06);
   font-size: 14px;
   height: 35px;
@@ -134,6 +134,13 @@
   font-weight: 600;
   border-radius: 6px;
   margin-top: 30px;
+}
+.login_button:hover {
+  background-color: #009737;
+}
+.login_button:active {
+  transform: scale(0.9);
+  box-shadow: 3px 2px 22px 1px rgba(85, 226, 108, 0.507);
 }
 .login_buttondisable {
   color: #fff;
@@ -146,9 +153,4 @@
   border-radius: 6px;
   margin-top: 30px;
   opacity: 0.7;
-}
-.login_button:active {
-  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
-  transform: translateY(4px);
 }
