--- a/src/pages/setting/styles.css
+++ b/src/pages/setting/styles.css
@@ -143,8 +143,8 @@
   border: 1px solid #e2dfef;
 }
 .teamslist_card {
-  background: #f5f6f9;
-  border-radius: 5px;
+  background: #f0f5f3;
+  border-radius: 6px;
   flex-direction: column;
   gap: 16px;
   padding: 24px;
@@ -163,7 +163,7 @@
   font-weight: 500;
 }
 .team_operationheader {
-  background-color: rgb(240 243 249/ 1) !important;
+  background-color: #e8f7f2 !important;
   border-radius: 6px;
   padding: 12px;
 }
@@ -183,6 +183,12 @@
 .teaminfo_policyheading {
   font-weight: 500;
   font-size: 15px;
+}
+.teams_nodatafound {
+  text-align: center;
+  font-weight: 700;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 /* break styles */
 .breakstatus_container {
