--- a/src/components/Common/commonstyles.css
+++ b/src/components/Common/commonstyles.css
@@ -19,6 +19,12 @@
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
+@media (min-width: 300px) and (max-width: 768px) {
+  .commonsearchbar {
+    width: 100% !important;
+    margin-bottom: 14px;
+  }
+}
 .commonsearchbar:hover {
   border-color: #d9d9d9;
 }
