--- a/src/layout/sidebarstyles.css
+++ b/src/layout/sidebarstyles.css
@@ -30,9 +30,95 @@
   height: 100%; /* Equivalent to h-full */
   transition: all 300ms ease-in-out; /* Equivalent to transition-all, duration-300, and ease-in-out */
 }
-/* @media (min-width: 320px) and (max-width: 800px) {
-  .my-custom-sidebar {
-    width: 100%;
-    height: 100%;
+/* header styles */
+.searchbarandexplore_container {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+@media (min-width: 300px) and (max-width: 768px) {
+  .searchbarandexplore_container {
+    margin-left: 12px;
   }
-} */
+}
+.navbar_discoversearchnbar {
+  width: 240px !important;
+  height: 40px !important;
+  font-size: 16px !important;
+  border-radius: 0px !important;
+  border-top-left-radius: 7px !important;
+  border-bottom-left-radius: 7px !important;
+}
+@media (min-width: 300px) and (max-width: 700px) {
+  .navbar_discoversearchnbar {
+    width: 140px !important;
+    height: 30px !important;
+  }
+}
+.navbar_discoversearchnbar:hover {
+  border-color: #25a17d !important;
+  border-width: 1px !important;
+}
+.navbar_discoversearchnbar:focus {
+  border-color: #25a17d !important;
+  border-width: 1px !important;
+}
+.navbar_discoversearchnbar:focus-within {
+  border-color: #25a17d !important;
+  border-width: 1px !important;
+}
+.explore_container {
+  height: 62px;
+}
+@media (min-width: 300px) and (max-width: 700px) {
+  .explore_container {
+    height: 71px;
+  }
+}
+.navbar_explorericon {
+  padding: 0px 29px !important;
+}
+@media (min-width: 300px) and (max-width: 700px) {
+  .navbar_explorericon {
+    padding: 0px 3px !important;
+  }
+}
+.explore_button {
+  width: 120px;
+  height: 40px;
+  border-start-start-radius: 0 !important;
+  border-end-start-radius: 0 !important;
+  font-size: 14px !important;
+  border-left-width: 0px !important;
+}
+@media (min-width: 300px) and (max-width: 700px) {
+  .explore_button {
+    width: 90px !important;
+    height: 30px;
+    padding: 0px 7px !important;
+  }
+}
+.explore_button:hover {
+  border-color: #25a17d !important;
+  color: black !important;
+  border-left-width: 1px !important;
+}
+.explore_button:hover .navbar_discoversearchnbar {
+  border-color: #25a17d !important;
+  color: red !important;
+}
+.logoutavatar_container {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0px 20px;
+}
+@media (min-width: 300px) and (max-width: 767px) {
+  .logoutavatar_container {
+    display: none;
+  }
+}
+@media (min-width: 300px) and (max-width: 767px) {
+  .header_collapesbuttonContainer {
+    display: none;
+  }
+}
