--- a/src/pages/setting/styles.css
+++ b/src/pages/setting/styles.css
@@ -107,6 +107,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 600;
 }
 .users_addbutton:hover {
   background-color: #009737;
@@ -172,6 +173,7 @@
   justify-content: center;
   align-items: center;
   padding: 0px 13px;
+  font-weight: 600;
 }
 @media (min-width: 375px) and (max-width: 800px) {
   .designation_addbutton {
